--- a/app/src/main/res/layout/item_fx_list.xml
+++ b/app/src/main/res/layout/item_fx_list.xml
@@ -26,7 +26,6 @@
         android:layout_weight="0.4"
         android:gravity="right"
         android:paddingTop="15dp"
-        android:paddingRight="15dp"
         android:paddingBottom="15dp"
         android:text="1.12576"
         android:textColor="@android:color/black"
@@ -34,13 +33,13 @@
         app:fontFamily="sans-serif-light" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/fxListArrowImage"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="6dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginBottom="18dp"
         android:layout_weight="0.1"
-        app:srcCompat="@drawable/ic_arrow_up" />
+        app:srcCompat="@drawable/arrow_down" />
 
 </LinearLayout>
