--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlue">#4269dd</color>
     <color name="colorRed">#D81B60</color>
+    <color name="colorLight">#E2E3EE</color>
 </resources>
