--- a/app/src/main/res/layout/item_info_price.xml
+++ b/app/src/main/res/layout/item_info_price.xml
@@ -11,10 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@android:color/white"
-        android:padding="20dp"
+        android:paddingLeft="40dp"
+        android:paddingTop="20dp"
+        android:paddingRight="40dp"
+        android:paddingBottom="20dp"
         app:cardCornerRadius="20dp"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="20dp">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,82 +30,59 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
                 <TextView
                     android:id="@+id/oneRow1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="0dp"
+                    android:layout_weight="0.1"
+                    android:gravity="left"
                     android:text="1"
                     android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    app:fontFamily="sans-serif-light" />
+                    android:textSize="22sp"
+                    app:fontFamily="sans-serif-medium" />
 
                 <TextView
                     android:id="@+id/currency1row1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="0dp"
+                    android:layout_weight="0.2"
+                    android:gravity="left"
                     android:text="USD"
                     android:textColor="@android:color/black"
-                    android:textSize="24sp" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/equalsRow1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="0dp"
+                    android:layout_weight="0.15"
+                    android:gravity="center"
+                    android:paddingLeft="8dp"
                     android:text="="
                     android:textColor="@android:color/black"
-                    android:textSize="24sp" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/priceRow1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.35"
                     android:gravity="right"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="0dp"
                     android:text="0.94352"
                     android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    app:fontFamily="sans-serif-light" />
+                    android:textSize="22sp"
+                    app:fontFamily="sans-serif-medium" />
 
                 <TextView
                     android:id="@+id/currency2Row1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="0dp"
+                    android:layout_weight="0.2"
+                    android:gravity="right"
                     android:text="EUR"
                     android:textColor="@android:color/black"
-                    android:textSize="24sp" />
+                    android:textSize="22sp" />
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
             </LinearLayout>
 
             <LinearLayout
@@ -111,82 +91,59 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
                 <TextView
                     android:id="@+id/oneRow2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:layout_weight="0.1"
+                    android:gravity="left"
                     android:text="1"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    app:fontFamily="sans-serif-light" />
+                    android:textColor="#A2A2A2"
+                    android:textSize="22sp"
+                    app:fontFamily="sans-serif-medium" />
 
                 <TextView
                     android:id="@+id/currency2row1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:layout_weight="0.2"
+                    android:gravity="left"
                     android:text="EUR"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp" />
+                    android:textColor="#A2A2A2"
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/equalsRow2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:layout_weight="0.15"
+                    android:gravity="center"
+                    android:paddingLeft="8dp"
                     android:text="="
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp" />
+                    android:textColor="#A2A2A2"
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/priceRow2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.35"
                     android:gravity="right"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
                     android:text="1.12435"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    app:fontFamily="sans-serif-light" />
+                    android:textColor="#A2A2A2"
+                    android:textSize="22sp"
+                    app:fontFamily="sans-serif-medium" />
 
                 <TextView
                     android:id="@+id/currency1Row2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:layout_weight="0.2"
+                    android:gravity="right"
                     android:text="USD"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp" />
+                    android:textColor="#A2A2A2"
+                    android:textSize="22sp" />
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
 
