--- a/app/src/main/res/layout/item_info_price.xml
+++ b/app/src/main/res/layout/item_info_price.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:padding="20dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/infoCardPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
         android:background="@android:color/white"
         android:paddingLeft="40dp"
         android:paddingTop="20dp"
         android:paddingRight="40dp"
         android:paddingBottom="20dp"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
         tools:layout_editor_absoluteX="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            android:padding="40dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -146,6 +148,5 @@
 
             </LinearLayout>
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
