--- a/app/src/main/res/layout/item_info_chart.xml
+++ b/app/src/main/res/layout/item_info_chart.xml
@@ -25,7 +25,7 @@
             android:padding="40dp">
 
             <ImageView
-                android:id="@+id/barsImageView"
+                android:id="@+id/chartImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="fitXY"
