--- a/app/src/main/res/drawable/chart_scale.xml
+++ b/app/src/main/res/drawable/chart_scale.xml
@@ -9,7 +9,7 @@
         </shape>
     </item>
 
-    <item android:top="1dp" android:left="1dp" android:right="1dp">
+    <item android:top="1dp">
         <shape
             android:shape="rectangle">
             <stroke android:width="1dp" android:color="#FFFFFFFF" />
