--- a/app/src/main/res/layout/item_info_chart.xml
+++ b/app/src/main/res/layout/item_info_chart.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         app:cardCornerRadius="10dp"
-        app:cardElevation="0dp"
+        app:cardElevation="10dp"
         tools:layout_editor_absoluteX="20dp">
 
         <LinearLayout
@@ -27,7 +27,7 @@
             <ImageView
                 android:id="@+id/chartImage"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="162dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@mipmap/ic_launcher" />
 
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="0dp"
                 android:background="@drawable/chart_scale"
                 android:text="" />
 
@@ -46,12 +46,20 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="1 YEAR"
+                    android:textColor="@android:color/black" />
+
+                <TextView
                     android:id="@+id/chartDateFromText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="2018-05-29"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/white" />
 
                 <TextView
                     android:id="@+id/chartDateToText"
@@ -60,7 +68,8 @@
                     android:layout_weight="1"
                     android:gravity="right"
                     android:text="2019-05-29"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/white" />
+
             </LinearLayout>
 
         </LinearLayout>
