--- a/app/src/main/res/layout/item_info_price.xml
+++ b/app/src/main/res/layout/item_info_price.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp">
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="20dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/infoCardPrice"
@@ -16,7 +18,7 @@
         android:paddingRight="40dp"
         android:paddingBottom="20dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="0dp"
+        app:cardElevation="10dp"
         tools:layout_editor_absoluteX="20dp">
 
         <LinearLayout
@@ -24,7 +26,10 @@
             android:layout_height="match_parent"
             android:background="@android:color/white"
             android:orientation="vertical"
-            android:padding="40dp">
+            android:paddingLeft="40dp"
+            android:paddingTop="20dp"
+            android:paddingRight="40dp"
+            android:paddingBottom="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
