--- a/app/src/main/res/layout/item_fx_list_footer.xml
+++ b/app/src/main/res/layout/item_fx_list_footer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorLight"
-    android:paddingBottom="100dp">
+    android:paddingBottom="20dp">
 
     <TextView
         android:id="@+id/textView7"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="echangeratesapi.io"
+        android:text="exchangeratesapi.io"
         android:textColor="#4D83DD"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
